# RapidGKC

./: .gitignore  13015_2017_97_MOESM1_ESM.txt  CMakeLists.txt  V2_gkc_cuda.cu  V2_kmer_counting.cu  V2_superkmers.hpp  baselines.py  concqueue.hpp  cpu_funcs.cpp  cpu_funcs.h  csr.hpp  cuda_utils.cuh  fileloader.hpp  fileloader_mmap.hpp  gkc_cuda.h  gkc_cuda.hpp  gkc_main.cpp  gpu_hash_counter.cu  gpu_kmercounting.cu  gpu_kmercounting.h  gpu_skmgen.cu  gpu_skmgen.h  kmer_counting.hpp  minimizer_filter.h  read_loader.hpp  read_loader_V2.hpp  readme.md  skmstore.hpp  skmstore2.hpp  thread_pool.hpp  types.h  use_raduls.h  utilities.cpp  utilities.hpp
